# poi

./: .gitignore  README.md  main.py  pyproject.toml
docs/: BATCH_INFERENCE.md  LLM_DATASET_GENERATOR.md  eval.md  inference_results_prefix_hint.csv
scripts/: check_all_hf_models.py  download_dataset.py  eval_models.ipynb  eval_paper_base.ipynb  eval_rqvae.py  evaluate_llm.py  generate_llm_datasets.py  inferen_rqvae_example.py  inference_llm.py  inference_results.csv  inference_rqvae.py  llama.ipynb  llm_inference.py  multi-gpu.py  prepare_rqvae_data.py  prepare_rqvae_data_explore.py  process_poi_data.py  process_poi_data_explore.py  rqvae.ipynb  test.ipynb  test_trained_llm.py  train_llm.py  train_llm_batch.py  train_llm_full.py  train_llm_multi_gpu.py  train_multiple_llm.py  train_rqvae.py  train_seq.py  unsloth.ipynb  upload_model.py  verify_dataset.ipynb
scripts/dataset/: check_all_hf_models.py  generate_llm_datasets.py  inference_rqvae_batch.py  prepare_rqvae_data.py  prepare_rqvae_data_explore.py  process_poi_data.py  process_poi_data_explore.py
scripts/evaluate/: cross_eval.ipynb  eval_hf_base_llm.py  eval_models.ipynb  evaluate_all_llm.py  evaluate_exploration.py  evaluate_llm.py  evaluate_new_llm.py
scripts/evaluate/visualization/: test.ipynb  test_cat_region.ipynb  test_location.ipynb  test_region.ipynb  unique_collision_calculation.py
scripts/llm/: inference_llm.py  train_llm_ddp_batch.py  train_llm_full.py
scripts/rqvae/: inference_rqvae.py  train_rqvae.py
scripts/train_llm/: train_llm.py  train_llm_batch.py  train_llm_ddp_batch.py  train_llm_ddp_batch_1.py  train_llm_ddp_batch_2.py  train_llm_ddp_single.py  train_llm_full.py
scripts/visualization/: test.ipynb  unique_collision_calculation.py
src/poi/: __init__.py  hf_utils.py  settings.py
src/poi/dataset/: __init__.py  download.py  llm.py  llm_dataset_generator.py  poi_processor.py  poi_processor_explore.py  rqvae.py  rqvae_preparer.py  rqvae_preparer_explore.py  utils.py
src/poi/llm/: __init__.py  config.py  ddp_utils.py  evaluate.py  inference.py  memory_utils.py  (+2 more)
(+16 files in other folders)
