[project]
name = "poi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.10.1",
    "bitsandbytes>=0.48.0",
    "datasets>=3.3.0",
    "ipykernel>=6.30.1",
    "peft>=0.17.1",
    "torch>=2.8.0",
    "transformers>=4.56.2",
    "trl>=0.15.2",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
