[project]
name = "poi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "HKUST COMP5331 POI Group" }
]
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.10.1",
    "bitsandbytes>=0.48.1 ; sys_platform == 'linux'",
    "bitsandbytes>=0.48.1 ; sys_platform == 'windows'",
    "datasets>=3.3.0",
    "dotenv>=0.9.9",
    "huggingface-hub[cli]>=0.35.3",
    "ipykernel>=6.30.1",
    "openlocationcode>=1.0.1",
    "pandas>=2.0.0",
    "peft>=0.17.1",
    "scikit-learn>=1.7.2",
    "tensorboard>=2.20.0",
    "torch>=2.8.0",
    "transformers>=4.56.2",
    "trl>=0.15.2",
    "unsloth>=2025.10.8 ; sys_platform == 'linux'",
    "unsloth>=2025.10.8 ; sys_platform == 'windows'",
]

[project.scripts]
poi = "poi:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[tool.uv]
no-build-isolation-package = ['flash-attn']

[tool.ruff]
line-length = 150
